musica (2.7) unreleased; urgency=low

  * jplayer.php, jplayer/js/jquery.min.js: embed local copy of this,
    for offline use

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 16 Sep 2010 14:11:26 -0700

musica (2.6-0ubuntu1) maverick; urgency=low

  * index.php: support nested album directories, LP: #640821

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 16 Sep 2010 14:11:19 -0700

musica (2.5-0ubuntu1) maverick; urgency=low

  * debian/install, favicon.ico, index.php: add a favicon.ico, LP: #622289
  * favicon.ico: stylize the musical note to look like an "M"

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 24 Aug 2010 15:11:07 -0400

musica (2.4-0ubuntu1) maverick; urgency=low

  * index.php: fix problem where songs or albums have two '.' in their
    name

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 15 Jun 2010 10:59:40 -0500

musica (2.3-0ubuntu1) maverick; urgency=low

  * jplayer.php: start playing on page load
  * index.php: move the "about" text to a single link, and a page of its
    own, creates more vertical space

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 01 Jun 2010 09:09:13 -0500

musica (2.2-0ubuntu1) maverick; urgency=low

  * index.php: support https protocol
  * index.php, jplayer.php, jplayer/skin/jplayer.blue.monday.css:
    - rearrange the player's css to make it a little less wide
  * jplayer.php: default to the flash player for now; should eventually
    add logic to determine native vs. flash

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 21 May 2010 08:38:41 -0500

musica (2.1-0ubuntu1) maverick; urgency=low

  * index.php: handle files that have multiple dots in the filename

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 19 May 2010 11:44:13 -0500

musica (2.0-0ubuntu1) maverick; urgency=low

  Add jPlayer (GPLv3) as an embedded javascript/flash mp3 player
  * debian/control, debian/install, debian/rules, index.php,
    jplayer.php, jplayer/js/Jplayer.as, jplayer/js/jquery.jplayer.min.js,