@@ -7,6 +7,7 @@ webserver="apache2"
 
 case "$1" in
 	configure)
+		chown www-data:www-data /var/lib/$package/tmp
 		a2ensite $package
 		invoke-rc.d $webserver reload
 	;;
